Fikset farver, imports og kommentarer